# Plvlcify

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  adev.py  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml
src/config/: api.dev.yml  api.prod.yml  api.test.yml
src/docs/source/: conf.py  index.rst
src/docs/source/pages/: aiohttp_quick_start.rst  commands.rst  documentation.rst  tests.rst
src/plvlcify/: .flake8  __main__.py  app.py  constants.py  routes.py
src/plvlcify/main/: views.py
src/plvlcify/main/tests/: test_views.py
src/plvlcify/static/styles/: main.css
src/plvlcify/templates/: index.html
src/plvlcify/utils/: check-requirements.py  common.py
src/requirements/: development.txt  documentation.txt  production.txt
src/utils/: light_control.py  m3u.py
