[tool.poetry]
name = "plvlcify"
version = "0.1.0"
description = ""
authors = ["iam0verit"]
readme = "README.md"
packages = [{include = "plvlcify", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
aiohttp = "^3.8.4"
aiohttp-jinja2 = "^1.5.1"
markdown2 = "^2.4.8"
trafaret = "^2.1.1"
trafaret-config = "^2.0.2"
yeelight = "^0.7.14"
backoff = "^2.2.1"

[tool.poetry.scripts]
plvcify = "src.plvlcify.cli:cli"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
aiohttp-devtools = "^1.0.post0"
create-aio-app = "^0.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
